Ajout d'un custom footer a la liste des restaurants

--- a/OdeToFood/OdeToFood.Web/Views/Shared/_Layout.cshtml
+++ b/OdeToFood/OdeToFood.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Mon application ASP.NET</p>
+            @RenderSection("footer", required:false)
         </footer>
     </div>
 
