--- a/OdeToFood/OdeToFood.Web/Views/Restaurants/Index.cshtml
+++ b/OdeToFood/OdeToFood.Web/Views/Restaurants/Index.cshtml
@@ -9,29 +9,8 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
-
-@section footer {
-    <div>This is a custom footer</div>
+@foreach (var item in Model)
+{
+    @Html.Partial("_PartialRestaurant", item)
 }
